[package]
name = "mosquitto-client"
version = "0.1.5"
authors = ["Steve Donovan <steve.j.donovan@google.com>"]

description = "Rust interface to the Mosquitto MQTT broker client"
documentation = "https://docs.rs/mosquitto-client"
repository = "https://github.com/stevedonovan/mosquitto-client.git"
readme = "readme.md"
license="MIT"

keywords = ["MQTT","mosquitto","client","pubsub"]

